<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/backgroundgray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dashboardtxt"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Dashboard"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/continueprojecttxt"
            android:layout_width="142dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="20dp"
            android:text="@string/Continue"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtaddnewproject"
            android:layout_width="142dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/Add"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Work Button -->
                <Button
                    android:id="@+id/btnwork"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundbtnwhite"
                    android:text="Work (0)"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <!-- School Button -->
                <Button
                    android:id="@+id/btnschool"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundbtnwhite"
                    android:text="School (0)"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <!-- General Button -->
                <Button
                    android:id="@+id/btngeneral"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundbtnwhite"
                    android:text="General (0)"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogoButtons"
            android:layout_width="180dp"
            android:layout_height="190dp"
            android:layout_gravity="right"
            android:layout_marginTop="-190dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Work Logo Button -->

                <Button
                    android:id="@+id/btnworklogo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btncircular"
                    android:contentDescription="@string/Work"
                    android:drawableStart="@drawable/work_on_computer_employee_software_engineer_programmer_svgrepo_com" />

                <!-- School Logo Button -->
                <Button
                    android:id="@+id/btnschoolLogo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btncircular"
                    android:contentDescription="@string/School"
                    android:drawableStart="@drawable/school_svgrepo_com" />

                <!-- General Logo Button -->
                <Button
                    android:id="@+id/btngeneralLogo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btncircular"
                    android:contentDescription="@string/General"
                    android:drawableStart="@drawable/productivity_ability_talent_productive_svgrepo_com"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/Recent"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="top|center_horizontal">

                <TextView
                    android:id="@+id/txtProjectName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Name"
                    android:textColor="@color/orangegradient"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtProjectStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Start_Time"
                    android:textColor="@color/orangegradient"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtProjectEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/End_Time"
                    android:textColor="@color/orangegradient"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/gameBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="-10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/img" />

        <Button
            android:id="@+id/projectBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/projectList"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>